<resources>
    <string name="app_name">QR Code Scanner Lite</string>
    <string name="qr">Scan QR Code</string>
    <string name="re">RESULT:</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_app">More apps</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share app</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="ad_attribution">Ad</string>
    <string name="version_name">version : 2.0.0</string>
    <string name="con">Contact Info</string>
    <string name="con_email">Email: prostudio.inc.contact@gmail.com</string>
    <string name="about_text">QR code scanner lite app provide an easy way to scan QR codes. If you face any problem then contact with us and suggestion are always appreciated. Thanks for downloading and using our app.</string>
</resources>
