<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rate_us"
        android:icon="@drawable/rate_us"
        android:title="@string/rate_us" />

    <item
        android:id="@+id/more_app"
        android:icon="@drawable/more_app"
        android:title="@string/more_app" />

    <item
        android:id="@+id/contract_us"
        android:icon="@drawable/contract_us"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/share_app"
        android:icon="@drawable/share_app"
        android:title="@string/share_app" />

    <item
        android:id="@+id/facebook_page"
        android:icon="@drawable/facebook_page"
        android:title="@string/facebook_page" />

    <item
        android:id="@+id/privacy_policy"
        android:icon="@drawable/privacy_poilcy"
        android:title="@string/privacy_policy" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about" />


</menu>